LEGEND
------
  [!] New plugin
  [+] New feature
  [*] Enhancement
  [-] Bug fix


------
  [!] Added new plugin for spell checking
  [!] Adden new plugin for keeping all user IM clients engaged in a conversation
  [!] Added new plugin for viewing recently used contacts in main window
  [-] The application may fail in some cases after unsuccessful Stanza-session initialization
  [-] In private chats history of communication are loaded even if the relevant setting has been disabled
  [-] When changing the nickname in the conference the nickname was not changed in the active conferences menu in the roster window
  [-] When requesting delivery of unread messages via RemoteControl in the message list fell messages from conferences and received on a different account
  [-] The saved status messages including about a file transfer, were displayed with incorrect date when loading from history in windows of a usual chat and a private chat of conferences
  [-] The exit from conference occurred incorrectly if was requested after a send of request for an entrance, but before receiving confirmation on an entrance
  [-] Full text search in file archive of messages in certain cases worked not correctly
  [-] Proxy authorization in certain cases was not worked


v1.2.0
------
  [!] Added new plugin for notifications about birthdays
  [!] Added new plugin for loading data from custom types of URLs
  [!] Added new plugin for exchanging roster contacts
  [+] Added ability to show a minimized window with the message when notification received
  [+] Added date separators in chat windows and conferences
  [+] Added ability to remove transpots with their contacts from roster
  [*] Notice of user activity in the chat duplicated on the chat tab
  [*] Added new types of notifications and changed the way of their settings
  [*] Added context menu for tabs in tabwindow
  [*] Search for contact-list starts automatically, just start typing the word