@@ -105,7 +105,7 @@ void AddContactDialog::initialize(IPluginManager *APluginManager)
 		FRoster = rosterPlugin!=NULL ? rosterPlugin->findRoster(FStreamJid) : NULL;
 		if (FRoster)
 		{
-			ui.cmbGroup->addItems(FRoster->groups().toList());
+			ui.cmbGroup->addItems(FRoster->allGroups().toList());
 			ui.cmbGroup->model()->sort(0,Qt::AscendingOrder);
 			ui.cmbGroup->setCurrentIndex(-1);
 			ui.lblGroupDelim->setText(tr("* nested group delimiter - '%1'").arg(FRoster->groupDelimiter()));
