@@ -5,7 +5,6 @@ LEGEND
   [*] Enhancement
   [-] Bug fix
 
-
 ------
   [!] Added new plugin for spell checking
   [!] Adden new plugin for keeping all user IM clients engaged in a conversation
@@ -17,7 +16,10 @@ LEGEND
   [-] The saved status messages including about a file transfer, were displayed with incorrect date when loading from history in windows of a usual chat and a private chat of conferences
   [-] The exit from conference occurred incorrectly if was requested after a send of request for an entrance, but before receiving confirmation on an entrance
   [-] Full text search in file archive of messages in certain cases worked not correctly
-  [-] Proxy authorization in certain cases was not worked
+  [-] Proxy authorization in certain cases was not working
+  [-] The application will fail if the server terminates the connection before the user enters the password
+  [-] In very rare cases renaming, moving and copying of nested groups not working correctly
+  [-] Removing of avatars in several selected accounts or contacts was not working
 
 
 v1.2.0
